--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -3,6 +3,8 @@ DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5433/postgres"
 
 PORT=8000
 GRPC_PORT=8001
+# port for the consumer side of the queue, serves realtime (RT) endpoint
+CONSUMER_PORT=8002
 
 RABBITMQ_URL=amqp://admin:adminpasswd@localhost:5672/%2f
 
