--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       PORT: 5667
       BACKEND_URL: http://app-server:8000
+      BACKEND_RT_URL: http://app-server:8002
       SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
       NEXTAUTH_URL: http://localhost:5667
       NEXTAUTH_SECRET: some_secret
@@ -90,6 +91,7 @@ services:
     ports:
       - "${APP_SERVER_HOST_PORT:-8000}:8000"
       - "${APP_SERVER_GRPC_HOST_PORT:-8001}:8001"
+      - "${APP_SERVER_RT_HOST_PORT:-8002}:8002"
     depends_on:
       postgres:
         condition: service_healthy
