--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,18 @@
     "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "test": "tsx --test tests/**/*.test.ts",
-    "schema-pull:lint": "drizzle-kit pull && sed -i.bak \"s/\\.default(')/\\.default('')/g\" lib/db/migrations/schema.ts && rm lib/db/migrations/schema.ts.bak && next lint --fix"
+    "schema-pull:lint": "drizzle-kit pull && sed -i.bak \"s/\\.default(')/\\.default('')/g\" lib/db/migrations/schema.ts && rm lib/db/migrations/schema.ts.bak && next lint --fix",
+    "ch:migrate": "tsx lib/clickhouse/cli.ts migrate",
+    "ch:status": "tsx lib/clickhouse/cli.ts status"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.17",
     "@ai-sdk/anthropic": "^2.0.13",
     "@ai-sdk/azure": "^2.0.26",
     "@ai-sdk/google": "^2.0.11",
-    "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/groq": "^2.0.17",
     "@ai-sdk/mistral": "^2.0.13",
+    "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/provider": "2.0.0",
     "@ai-sdk/react": "^2.0.29",
     "@aws-sdk/client-s3": "^3.864.0",
@@ -77,9 +79,10 @@
     "@uiw/codemirror-themes": "^4.25.1",
     "@uiw/react-codemirror": "^4.25.1",
     "@vercel/otel": "^1.13.0",
-    "ai": "5.0.28",
     "@xyflow/react": "^12.8.3",
+    "ai": "5.0.28",
     "class-variance-authority": "^0.7.1",
+    "clickhouse-migrations": "^1.1.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dagre": "^0.8.5",
@@ -125,11 +128,11 @@
     "shiki": "^3.12.2",
     "streamdown": "^1.2.0",
     "stripe": "^16.12.0",
-    "use-stick-to-bottom": "^1.1.1",
-    "zod": "^4.1.5",
     "swr": "^2.3.6",
+    "use-stick-to-bottom": "^1.1.1",
     "uuid": "^9.0.1",
     "yaml": "^2.8.1",
+    "zod": "^4.1.5",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
