--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,7 @@
     "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "test": "tsx --test tests/**/*.test.ts",
-    "schema-pull:lint": "drizzle-kit pull && sed -i.bak \"s/\\.default(')/\\.default('')/g\" lib/db/migrations/schema.ts && rm lib/db/migrations/schema.ts.bak && next lint --fix",
-    "ch:migrate": "tsx lib/clickhouse/cli.ts migrate",
-    "ch:status": "tsx lib/clickhouse/cli.ts status"
+    "schema-pull:lint": "drizzle-kit pull && sed -i.bak \"s/\\.default(')/\\.default('')/g\" lib/db/migrations/schema.ts && rm lib/db/migrations/schema.ts.bak && next lint --fix"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.17",
