--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,6 +83,7 @@
     "clickhouse-migrations": "^1.1.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3-scale": "^4.0.2",
     "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.6.1",
@@ -138,6 +139,7 @@
     "@next/eslint-plugin-next": "~15.5.2",
     "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/d3-scale": "^4.0.9",
     "@types/dagre": "^0.7.53",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/libsodium-wrappers": "^0.7.14",
