quickwit search (squash all)

--- a/docker-compose-local-dev-full.yml
+++ b/docker-compose-local-dev-full.yml
@@ -64,7 +64,20 @@ services:
       timeout: 5s
       retries: 5
 
+  quickwit:
+    image: quickwit/quickwit:v0.8.2
+    pull_policy: always
+    ports:
+      - "7280:7280" # REST API and UI
+      - "7281:7281" # OTLP / gRPC
+    environment:
+      QW_DATA_DIR: /quickwit/qwdata
+    command: ["run"]
+    volumes:
+      - quickwit-data:/quickwit/qwdata
+
 volumes:
   clickhouse-data:
   clickhouse-logs:
   postgres-data:
+  quickwit-data:
