--- a/docker-compose-local-dev.yml
+++ b/docker-compose-local-dev.yml
@@ -93,8 +93,24 @@ services:
       ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
       QUERY_ENGINE_URL: http://query-engine:8903
+      QUICKWIT_SEARCH_URL: http://quickwit:7280
+      QUICKWIT_INGEST_URL: http://quickwit:7281
+      QUICKWIT_SPANS_INDEX_ID: spans
+
+  quickwit:
+    image: quickwit/quickwit:v0.8.2
+    pull_policy: always
+    ports:
+      - "7280:7280" # REST API and UI
+      - "7281:7281" # OTLP / gRPC
+    environment:
+      QW_DATA_DIR: /quickwit/qwdata
+    command: [ "run" ]
+    volumes:
+      - quickwit-data:/quickwit/qwdata
 
 volumes:
   postgres-data:
   clickhouse-data:
   clickhouse-logs:
+  quickwit-data:
