--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -23,3 +23,7 @@ ENVIRONMENT=FULL
 # REDIS_URL=redis://localhost:6379
 
 QUERY_ENGINE_URL=http://localhost:8903
+
+QUICKWIT_INGEST_URL=http://localhost:7281 # grpc
+QUICKWIT_SEARCH_URL=http://localhost:7280 # http
+QUICKWIT_SPANS_INDEX_ID=spans
