--- a/frontend/lib/quickwit/indexes/events.yaml
+++ b/frontend/lib/quickwit/indexes/events.yaml
@@ -1,11 +1,11 @@
 version: "0.8"
-index_id: spans
+index_id: events
 doc_mapping:
   field_mappings:
-    - name: span_id
-      type: text
-      tokenizer: raw
-      fast: false
+    - name: is_exception
+      type: bool
+      fast: true
+      stored: false
     - name: project_id
       type: text
       tokenizer: raw
@@ -15,22 +15,18 @@ doc_mapping:
       type: text
       tokenizer: raw
       fast: true
-    - name: start_time
+    - name: span_id
+      type: text
+      tokenizer: raw
+      fast: false
+    - name: timestamp
       type: datetime
       fast: true
       stored: false
-    - name: input
+    - name: name
       type: text
       tokenizer: default
-      fast: false
       stored: false
-      record: position
-    - name: output
-      type: text
-      tokenizer: default
-      fast: false
-      stored: false
-      record: position
     - name: attributes
       type: text
       tokenizer: default
@@ -38,9 +34,9 @@ doc_mapping:
       stored: false
       record: position
   tag_fields: []
-  timestamp_field: start_time
+  timestamp_field: timestamp
 search_settings:
-  default_search_fields: [input, output, attributes]
+  default_search_fields: [name, attributes]
 retention:
   period: 90 days
   schedule: daily
