--- a/frontend/lib/quickwit/indexes/events.yaml
+++ b/frontend/lib/quickwit/indexes/events.yaml
@@ -5,12 +5,10 @@ doc_mapping:
     - name: is_exception
       type: bool
       fast: true
-      stored: false
     - name: project_id
       type: text
       tokenizer: raw
       fast: true
-      stored: false
     - name: trace_id
       type: text
       tokenizer: raw
@@ -18,7 +16,11 @@ doc_mapping:
     - name: span_id
       type: text
       tokenizer: raw
-      fast: false
+      fast: true
+    - name: id
+      type: text
+      tokenizer: raw
+      fast: true
     - name: timestamp
       type: datetime
       fast: true
