--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -24,6 +24,7 @@ dotenv = "0.15"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.13"
 futures-util = "0.3"
+hex = "0.4"
 indexmap = {version = "2.11.4", features = ["serde"]}
 itertools = "0.14.0"
 jsonwebtoken = "9"
