--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -45,6 +45,7 @@ rustls = {version = "0.23", features = ["ring"]}
 sentry = {version = "0.45.0", features = ["opentelemetry"]}
 serde = "1.0"
 serde_json = {version = "1.0.140", features = ["preserve_order"]}
+serde_with = "3.11"
 sha3 = "0.10.8"
 sodiumoxide = "0.2.7"
 sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "bigdecimal", "tls-rustls"]}
