unify query engine with prod, remove settings clause

--- a/.github/workflows/query-engine-tests-check.yml
+++ b/.github/workflows/query-engine-tests-check.yml
@@ -7,7 +7,7 @@ on:
       - opened
       - reopened
     paths:
-      - 'query-engine/**' 
+      - "query-engine/**"
 
 jobs:
   test:
@@ -15,11 +15,11 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: 3.13
+          python-version: 3.14
       - name: Install uv
         uses: astral-sh/setup-uv@v7
         with:
