unify query engine with prod, remove settings clause (#1094)
* unify query engine with prod, remove settings clause

* address comments

--- a/query-engine/Dockerfile
+++ b/query-engine/Dockerfile
@@ -1,36 +1,39 @@
-FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim AS builder
+FROM ghcr.io/astral-sh/uv:python3.14-trixie-slim AS builder
 
 ENV UV_COMPILE_BYTECODE=1 UV_LINK_MODE=copy
+
+ENV UV_NO_DEV=1
 
 ENV UV_PYTHON_INSTALL_DIR=/python
 
 ENV UV_PYTHON_PREFERENCE=only-managed
 
-RUN uv python install 3.13
+RUN uv python install 3.14
 
 WORKDIR /app
 
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project --no-dev
+    uv sync --locked --no-install-project
 
 ADD . /app
 
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-dev
+    uv sync --locked
 
-FROM debian:bookworm-slim
+FROM debian:trixie-slim
 
-RUN adduser --disabled-password --gecos "" --uid 1000 app
+RUN groupadd --system --gid 999 nonroot \
+ && useradd --system --gid 999 --uid 999 --create-home nonroot
 
-COPY --from=builder --chown=app:app /python /python
+COPY --from=builder --chown=nonroot:nonroot /python /python
 
-COPY --from=builder --chown=app:app /app /app
+COPY --from=builder --chown=nonroot:nonroot /app /app
 
 ENV PATH="/app/.venv/bin:$PATH"
 
-USER app
+USER nonroot
 
 WORKDIR /app
 
