--- a/frontend/package.json
+++ b/frontend/package.json
@@ -98,6 +98,7 @@
     "libsodium-wrappers": "^0.7.15",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
+    "mustache": "^4.2.0",
     "next": "^15.5.7",
     "next-auth": "^4.24.11",
     "next-mdx-remote": "^5.0.0",
@@ -126,7 +127,7 @@
     "rrweb-player": "2.0.0-alpha.18",
     "sharp": "^0.33.5",
     "shiki": "^3.12.2",
-    "streamdown": "^1.2.0",
+    "streamdown": "^1.6.10",
     "stripe": "^16.12.0",
     "swr": "^2.3.6",
     "use-stick-to-bottom": "^1.1.1",
@@ -144,6 +145,7 @@
     "@types/dagre": "^0.7.53",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/libsodium-wrappers": "^0.7.14",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^24.3.0",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.10",
