--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -6,13 +6,13 @@ version = "0.1.0"
 [dependencies]
 actix-multipart = "0.7.2"
 actix-service = "2.0.3"
-actix-web = "4.11"
+actix-web = "4.12"
 actix-web-httpauth = "0.8.2"
 anyhow = "1"
 async-stream = "0.3.6"
 async-trait = "0.1"
-aws-config = "1.8.2"
-aws-sdk-s3 = "1.97.0"
+aws-config = "1.8.12"
+aws-sdk-s3 = "1.118.0"
 backoff = {version = "0.4.0", features = ["tokio"]}
 base64 = "0.22.1"
 bytes = "1.10.1"
@@ -26,21 +26,21 @@ enum_dispatch = "0.3.13"
 futures-util = "0.3"
 indexmap = {version = "2.11.4", features = ["serde"]}
 itertools = "0.14.0"
-lapin = "3.0.0"
+lapin = "3.7"
 log = "0.4.28"
 moka = {version = "0.12.10", features = ["sync", "future"]}
 num_cpus = "1.16.0"
 opentelemetry = {version = "0.29.1", features = ["trace"]}
 opentelemetry_sdk = {version = "0.29.0", features = ["trace"]}
-prost = "0.13"
+prost = "0.14"
 rand = "0.9.1"
 rayon = "1.10.0"
 redis = {version = "0.32.4", features = ["tokio-comp"]}
 regex = "1.11.1"
 reqwest = {version = "0.12.22", features = ["json"]}
 rustls = {version = "0.23", features = ["ring"]}
-# Sentry SDK must be compatible with the opentelemetry version. For sentry = 0.45.0, opentelemetry = 0.29
-sentry = {version = "0.45.0", features = ["opentelemetry"]}
+# Sentry SDK must be compatible with the opentelemetry version. For sentry = 0.46.0, opentelemetry = 0.29
+sentry = {version = "0.46.0", features = ["opentelemetry"]}
 serde = "1.0"
 serde_json = {version = "1.0.140", features = ["preserve_order"]}
 sha3 = "0.10.8"
@@ -50,7 +50,8 @@ thiserror = "2"
 tikv-jemallocator = "0.6"
 tokio = {version = "1.46", features = ["macros", "rt-multi-thread"]}
 tokio-stream = {version = "0.1", features = ["net"]}
-tonic = {version = "0.13", features = ["gzip"]}
+tonic = {version = "0.14", features = ["gzip"]}
+tonic-prost = "0.14"
 tracing = {version = "0.1.41", features = ["attributes"]}
 # Tracing opentelemetry must be compatible with the opentelemetry version. For tracing-opentelemetry = 0.30.0, opentelemetry = 0.29
 tracing-opentelemetry = "0.30.0"
@@ -59,4 +60,4 @@ url = "2.5.4"
 uuid = {version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "v7", "std"]}
 
 [build-dependencies]
-tonic-build = "0.13"
+tonic-prost-build = "0.14"
