--- a/frontend/package.json
+++ b/frontend/package.json
@@ -96,6 +96,7 @@
     "libsodium-wrappers": "^0.7.15",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
+    "mustache": "^4.2.0",
     "next": "^15.5.9",
     "next-auth": "^4.24.13",
     "next-mdx-remote": "^5.0.0",
@@ -140,6 +141,7 @@
     "@types/dagre": "^0.7.53",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/libsodium-wrappers": "^0.7.14",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^24.3.0",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.10",
