--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "next build && next start",
     "type-check": "tsc --noEmit",
     "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "test": "tsx --test tests/**/*.test.ts",
-    "schema-pull:lint": "drizzle-kit pull && sed -i.bak \"s/\\.default(')/\\.default('')/g\" lib/db/migrations/schema.ts && sed -i.bak \"s/vector()/jsonb()/g\" lib/db/migrations/schema.ts && rm lib/db/migrations/schema.ts.bak && next lint --fix"
+    "schema-pull:lint": "drizzle-kit pull && sed -i.bak \"s/\\.default(')/\\.default('')/g\" lib/db/migrations/schema.ts && sed -i.bak \"s/vector()/jsonb()/g\" lib/db/migrations/schema.ts && rm lib/db/migrations/schema.ts.bak && eslint . --fix"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^3.0.17",
@@ -133,7 +133,7 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.18.0",
     "@next/eslint-plugin-next": "~15.5.9",
     "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/typography": "^0.5.16",
@@ -149,19 +149,11 @@
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^8.50.0",
-    "@typescript-eslint/parser": "^8.50.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.39.2",
-    "eslint-config-love": "^137.0.0",
-    "eslint-config-next": "~15.5.9",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-unused-imports": "^4.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -169,6 +161,7 @@
     "tailwindcss": "^4.1.15",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.32.0"
   }
 }
