--- a/frontend/package.json
+++ b/frontend/package.json
@@ -126,6 +126,7 @@
     "streamdown": "^1.6.10",
     "stripe": "^16.12.0",
     "swr": "^2.3.6",
+    "tw-shimmer": "^0.4.2",
     "use-stick-to-bottom": "^1.1.1",
     "uuid": "^13.0.0",
     "yaml": "^2.8.1",
