--- a/frontend/package.json
+++ b/frontend/package.json
@@ -111,7 +111,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "mustache": "^4.2.0",
-    "next": "16.1.1",
+    "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "next-mdx-remote": "^5.0.0",
     "pako": "^2.1.0",
@@ -120,9 +120,9 @@
     "posthog-js": "^1.260.1",
     "posthog-node": "^5.7.0",
     "re-resizable": "^6.11.2",
-    "react": "19.2.3",
+    "react": "^19.2.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.2.3",
+    "react-dom": "^19.2.3",
     "react-github-btn": "^1.4.0",
     "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.62.0",
@@ -159,8 +159,8 @@
     "@types/mustache": "^4.2.6",
     "@types/node": "^24.3.0",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "19.2.8",
-    "@types/react-dom": "19.2.3",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
