--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
     "@vercel/otel": "^1.13.0",
     "@xyflow/react": "^12.8.3",
     "ai": "5.0.81",
+    "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.1",
     "clickhouse-migrations": "^1.1.1",
     "clsx": "^2.1.1",
