feat: add controllable posthog

--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -147,6 +147,7 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
       QUICKWIT_SEARCH_URL: http://quickwit:7280
+      NEXT_PUBLIC_ANONYMOUS_TELEMETRY: ${NEXT_PUBLIC_ANONYMOUS_TELEMETRY}
 
 volumes:
   clickhouse-data:
