--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -36,3 +36,7 @@ OPENAI_API_KEY=
 
 QUERY_ENGINE_URL=
 QUICKWIT_SEARCH_URL=
+# Telemetry Configuration
+# Set to 'true' to enable anonymous usage analytics and error reporting
+# To opt out of telemetry, set this to 'false' or remove this line entirely
+NEXT_PUBLIC_ANONYMOUS_TELEMETRY=true
