--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -38,9 +38,12 @@ rayon = "1.11.0"
 redis = {version = "0.32.7", features = ["tokio-comp"]}
 regex = "1.12.2"
 reqwest = {version = "0.12.22", features = ["json"]}
+rmcp = {version = "0.14", features = ["server", "transport-streamable-http-server"]}
+rmcp-actix-web = "0.11"
 rustls = {version = "0.23", features = ["ring"]}
 # Sentry SDK must be compatible with the opentelemetry version. For sentry = 0.46.0, opentelemetry = 0.29
 sentry = {version = "0.46.0", features = ["opentelemetry"]}
+schemars = {version = "1", features = ["uuid1"]}
 serde = "1.0"
 serde_json = {version = "1.0.149", features = ["preserve_order"]}
 serde_yaml = "0.9"
