--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -24,6 +24,7 @@ dotenv = "0.15"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.13"
 futures-util = "0.3"
+hex = "0.4"
 indexmap = {version = "2.13.0", features = ["serde"]}
 itertools = "0.14.0"
 lapin = "3.7"
@@ -37,7 +38,7 @@ rand = "0.9.2"
 rayon = "1.11.0"
 redis = {version = "0.32.7", features = ["tokio-comp"]}
 regex = "1.12.2"
-reqwest = {version = "0.12.22", features = ["json"]}
+reqwest = {version = "0.12.22", features = ["json", "stream"]}
 rustls = {version = "0.23", features = ["ring"]}
 # Sentry SDK must be compatible with the opentelemetry version. For sentry = 0.46.0, opentelemetry = 0.29
 sentry = {version = "0.46.0", features = ["opentelemetry"]}
