--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -5,7 +5,6 @@ version = "0.1.0"
 
 [dependencies]
 actix-multipart = "0.7.2"
-actix-service = "2.0.3"
 actix-web = "4.12"
 actix-web-httpauth = "0.8.2"
 anyhow = "1"
@@ -38,7 +37,7 @@ rand = "0.9.2"
 rayon = "1.11.0"
 redis = {version = "0.32.7", features = ["tokio-comp"]}
 regex = "1.12.2"
-reqwest = {version = "0.12.22", features = ["json", "stream"]}
+reqwest = {version = "0.12.22", features = ["json"]}
 rustls = {version = "0.23", features = ["ring"]}
 # Sentry SDK must be compatible with the opentelemetry version. For sentry = 0.46.0, opentelemetry = 0.29
 sentry = {version = "0.46.0", features = ["opentelemetry"]}
@@ -58,7 +57,6 @@ tracing = {version = "0.1.41", features = ["attributes"]}
 # Tracing opentelemetry must be compatible with the opentelemetry version. For tracing-opentelemetry = 0.30.0, opentelemetry = 0.29
 tracing-opentelemetry = "0.30.0"
 tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
-url = "2.5.8"
 uuid = {version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "v7", "std"]}
 
 [build-dependencies]
