feat: signals feature os, granulate features

--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ NEXTAUTH_SECRET=0123456789abcdef0123456789abcdef
 # Uncomment and set this to enable OpenAI support. Currently used in Next.js
 # to generate chat names.
 # OPENAI_API_KEY
+
+# Uncomment and set this to enable the signals feature.
+# GOOGLE_GENERATIVE_AI_API_KEY=
