--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -27,3 +27,6 @@ QUERY_ENGINE_URL=http://localhost:8903
 QUICKWIT_INGEST_URL=http://localhost:7281 # grpc
 QUICKWIT_SEARCH_URL=http://localhost:7280 # http
 QUICKWIT_SPANS_INDEX_ID=spans
+
+# Optional, set this to enable the signals feature
+# GOOGLE_GENERATIVE_AI_API_KEY=
