--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -35,5 +35,8 @@ S3_TRACE_PAYLOADS_BUCKET=
 REDIS_URL=
 OPENAI_API_KEY=
 
+# Set this to enable the signals feature
+GOOGLE_GENERATIVE_AI_API_KEY=
+
 QUERY_ENGINE_URL=
 QUICKWIT_SEARCH_URL=
