--- a/frontend/package.json
+++ b/frontend/package.json
@@ -110,6 +110,7 @@
     "libsodium-wrappers": "^0.7.15",
     "lodash": "^4.17.23",
     "lucide-react": "^0.468.0",
+    "luxon": "^3.7.2",
     "mustache": "^4.2.0",
     "next": "^16.1.6",
     "next-auth": "^4.24.13",
@@ -155,6 +156,7 @@
     "@types/dagre": "^0.7.53",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/libsodium-wrappers": "^0.7.14",
+    "@types/luxon": "^3.7.1",
     "@types/mustache": "^4.2.6",
     "@types/node": "^24.3.0",
     "@types/papaparse": "^5.3.16",
